--- a/www/templates/attend.html
+++ b/www/templates/attend.html
@@ -1,16 +1,279 @@
 <ion-view view-title="Chats">
   <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
+	<div class="svg-content"></div>
+<script>
+(function(d3){
+	
 
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
+var fontSize = 10;
+var totalW = 860, totalH = 500;
+var textPadding = 0.5, textMargin=1.5, lineH = 0.1, lineP = 0.2;
+var bottomR = 3*textMargin+textPadding, topTableBorder = textMargin+textPadding+lineP;
+var middleTableBorder = bottomR-lineP-textPadding, barIndcatorPos = 2*textMargin-lineP;
+var lastRow = bottomR+textMargin, middleRow = 2*textMargin;
+
+var margin = {top: fontSize*3, right: fontSize*2, bottom: fontSize*7, left: fontSize*8},
+    width = totalW - margin.left - margin.right,
+    height = totalH - margin.top - margin.bottom;
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom")
+    .tickFormat(function(d) { return d+'月'});
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .ticks(20, "%");
+
+var line = d3.svg.line()
+    .x(function(d) { return x(d.month); })
+    .y(function(d) { return y(d.expect); });
+
+var percentage = d3.format(".2%");
+
+var svg = d3.select(".svg-content")
+    .style("width", width+'px').append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.select("body").style("font-size", fontSize+'px');
+
+//d3.tsv("chart-data.json", type, function(error, data) {
+  //if (error) throw error;
+
+  var data = [{"month":"1","frequency":0.03167,"expect":"0.03167"},{"month":"2","frequency":0.01492,"expect":"0.01782"},{"month":"3","frequency":0.02782,"expect":"0.02782"},{"month":"4","frequency":0.03253,"expect":"0.02782"},{"month":"5","frequency":0.02702,"expect":"0.03820"},{"month":"6","frequency":0.02288,"expect":"0.02782"},{"month":"7","frequency":0.02015,"expect":"0.02782"},{"month":"8","frequency":0.04094,"expect":"0.02782"},{"month":"9","frequency":0.03966,"expect":"0.02700"},{"month":"10","frequency":0.02153,"expect":"0.02000"},{"month":"11","frequency":0.02772,"expect":"0.02782"},{"month":"12","frequency":0.01025,"expect":"0.01982"}];
+
+  x.domain(data.map(function(d) { return d.month; }));
+  y.domain([0, d3.max([
+    d3.max(data, function(d) { return d.frequency; }), 
+    d3.max(data, function(d) { return d.expect; })
+    ])]);
+
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
+  
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end")
+      .text("审核问题关闭率");
+
+  svg.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.month); })
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.frequency); })
+      .attr("height", function(d) { return height - y(d.frequency); });
+
+  var barWidth = x.rangeBand();
+  var xRange = x.range();
+  var xExtent = x.rangeExtent();
+  var xStep = xRange[1] - xRange[0] - barWidth;
+  var xStart = xRange[0];
+
+  /* Target line */
+  svg.append("path")
+      .datum(data)
+      .attr("class", "line")
+      .attr("d", line)
+      .attr("transform", "translate(" + barWidth/2 + ",0)");
+  /* Border of the table's row */
+  svg.append("line")
+      .attr("class", "dtline")
+      .attr("x1", -fontSize*(lastRow+textPadding))
+      .attr("y1", fontSize*topTableBorder)
+      .attr("x2", xExtent[1])
+      .attr("y2", fontSize*topTableBorder)
+      .attr("transform", "translate(0, " + height + ")")
+
+  /* Border of the table's row */
+  svg.append("line")
+      .attr("class", "dtline")
+      .attr("x1", -fontSize*(lastRow+textPadding))
+      .attr("y1", fontSize*middleTableBorder)
+      .attr("x2", xExtent[1])
+      .attr("y2", fontSize*middleTableBorder)
+      .attr("transform", "translate(0," + height + ")")
+  /* Border of the table's row */
+  svg.append("line")
+      .attr("class", "dtline")
+      .attr("x1", -fontSize*(lastRow+textPadding))
+      .attr("y1", fontSize*(lastRow-lineH))
+      .attr("x2", xExtent[1])
+      .attr("y2", fontSize*(lastRow-lineH))
+      .attr("transform", "translate(0," + height + ")")
+  /* Second Left of the table's col */
+  svg.append("line")
+      .attr("class", "dtline")
+      .attr("x1", 0)
+      .attr("y1", 0)
+      .attr("x2", 0)
+      .attr("y2", fontSize*(lastRow-lineH))
+      .attr("transform", "translate(0," + height + ")");
+  /* Left Border of the table */
+  svg.append("line")
+      .attr("class", "dtline")
+      .attr("x1", 0)
+      .attr("y1", fontSize*topTableBorder)
+      .attr("x2", 0)
+      .attr("y2", fontSize*(lastRow-lineH))
+      .attr("transform", "translate("+(-fontSize*(lastRow+textPadding))+"," + height + ")");
+
+  //Top Border of the chart
+  /*svg.append("line")
+      .attr("class", "dtline")
+      .attr("x1", 0)
+      .attr("y1", 0)
+      .attr("x2", xExtent[1])
+      .attr("y2", 0);
+
+   Right Border of the chart 
+  svg.append("line")
+      .attr("class", "dtline")
+      .attr("x1", xExtent[1])
+      .attr("y1", 0)
+      .attr("x2", xExtent[1])
+      .attr("y2", height);
+  */
+
+  /* Right Border of the table's col */
+  svg.append("line")
+      .attr("class", "dtline")
+      .attr("x1", 0)
+      .attr("y1", 0)
+      .attr("x2", 0)
+      .attr("y2", fontSize*(lastRow-lineH))
+      .attr("transform", "translate("+xExtent[1]+"," + height + ")");
+
+  /* Vertical Line of the table */
+  svg.selectAll(".vtline")
+    .data(data)
+    .enter().append("line")
+      .attr("class", "dtline")
+      .attr("x1", 0)
+      .attr("y1", 0)
+      .attr("x2", 0)
+      .attr("y2", fontSize*(lastRow-lineH))
+      .attr("transform", function(d, i){if(i==0){return ""}; return "translate("+(xRange[i]-xStep/2)+"," + height + ")"});
+
+  svg.append("text")
+      //.attr("transform", function(d){return "translate("+d.month+","+d.expect+")"})
+      .attr("class", "val")
+      .attr("x", xExtent[1]/2)
+      .attr("y", -textMargin*fontSize)
+      .style("text-anchor", "middle")
+      .text("审核问题关闭率（月度KPI样例）");
+
+  /* Text 'Actual' in the bottom table */
+  svg.append("text")
+      //.attr("transform", function(d){return "translate("+d.month+","+d.expect+")"})
+      .attr("class", "val")
+      .attr("x", -fontSize)
+      .attr("y", fontSize*middleRow)
+      .attr("dx", fontSize/4)
+      .attr("dy", ".71em")
+      .attr("transform", "translate(0," + height + ")")
+      .style("text-anchor", "end")
+      .text("Actual");
+
+  /* Text 'Target' in the bottom table */
+  svg.append("text")
+      //.attr("transform", function(d){return "translate("+d.month+","+d.expect+")"})
+      .attr("class", "val")
+      .attr("x", -fontSize)
+      .attr("y", fontSize*bottomR)
+      .attr("dx", fontSize/4)
+      .attr("dy", ".71em")
+      .attr("transform", "translate(0," + height + ")")
+      .style("text-anchor", "end")
+      .text("Target");
+
+  /* bar indicator in the bottom table */
+  svg.append("rect")
+      .attr("class", "actualIndicator")
+      .attr("x", -fontSize*lastRow)
+      .attr("width", barWidth/2)
+      .attr("y", fontSize*barIndcatorPos)
+      .attr("height", fontSize)
+      .attr("transform", "translate(0," + height + ")");
+
+  /* line indicator in the bottom table */
+  svg.append("line")
+      .attr("class", "line")
+      .attr("x1", -fontSize*lastRow)
+      .attr("y1", fontSize*(bottomR+textPadding))
+      .attr("x2", barWidth/2-fontSize*lastRow)
+      .attr("y2", fontSize*(bottomR+textPadding))
+      .attr("transform", "translate(0," + height + ")");
+
+  /* dot indicator in the bottom table */
+  svg.append("circle")
+      .attr("class", "dotIndicator")
+      .attr("r", middleRow+textPadding)
+      .attr("cx", -fontSize*lastRow+barWidth/4)
+      .attr("cy", fontSize*(bottomR+textPadding))
+      .attr("transform", "translate(0," + height + ")");
+
+  /* dot in target line */
+  svg.selectAll(".dot")
+      .data(data)
+    .enter().append("circle")
+      .attr("class", "dot")
+      .attr("r", middleRow+textPadding)
+      .attr("cx", function(d) { return x(d.month); })
+      .attr("cy", function(d) { return y(d.expect); })
+      .attr("transform", "translate(" + barWidth/2 + ",0)");
+
+  /* Actual value in the table */
+  svg.selectAll(".text")
+      .data(data)
+    .enter().append("text")
+      .attr("class", "val")
+      .attr("x", function(d,i){return barWidth/2 + xRange[i]})
+      .attr("y", function(d){return fontSize*bottomR;})
+      .attr("dx", fontSize/4)
+      .attr("dy", ".71em")
+      .attr("transform", "translate(0," + height + ")")
+      .style("text-anchor", "middle")
+      .text(function(d){return percentage(d3.round(d.frequency, 4))});
+
+  /* Target value in the table */
+  svg.selectAll(".text")
+      .data(data)
+    .enter().append("text")
+      .attr("class", "val")
+      .attr("x", function(d,i){return barWidth/2 + xRange[i]})
+      .attr("y", function(d){return fontSize*middleRow;})
+      .attr("dx", fontSize/4)
+      .attr("dy", ".71em")
+      .attr("transform", "translate(0," + height + ")")
+      .style("text-anchor", "middle")
+      .text(function(d){return percentage(d3.round(d.expect, 4))});
+//});
+
+function type(d) {
+  d.frequency = +d.frequency;
+  return d;
+}
+})(d3);
+</script>
   </ion-content>
 </ion-view>
