integrate d3 with angularjs

--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -1,7 +1,7 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
   <ion-header-bar align-title="center" class="bar-positive">
   <div class="buttons">
-    <button class="button" ng-click="doSomething()">Left Button</button>
+    <!-- <button class="button" ng-click="doSomething()">Left Button</button> -->
     <!-- <div>
       <span>上海大众汽车</span>
       <span>Shanghai VolksWagen</span>
@@ -9,7 +9,7 @@
   </div>
   <h1 class="title">CPX 小组信息板</h1>
   <div class="buttons">
-    <button class="button">Right Button</button>
+    <!-- <button class="button">Right Button</button> -->
   </div>
 </ion-header-bar>
   <ion-content class="padding">
