--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,22 +1,91 @@
+/* Media Query */
+@media screen and (min-width: 35.5em){
+	body{
+		font-size: 12px;
+	}
+}
+@media screen and (min-width: 48em){
+	body{
+		font-size: 14px;
+	}
+}
+@media screen and (min-width: 64em){
+	body{
+		font-size: 15px;
+	}
+}
+@media screen and (min-width: 80em){
+	body{
+		font-size: 16px;
+	}	
+}
+@media screen and (min-width: 80em){
+	body{
+		font-size: 16px;
+	}	
+}
+@media screen and (min-width: 120em){
+	body{
+		font-size: 24px;
+	}	
+}
+@media screen and (min-width: 120em){
+	body{
+		font-size: 24px;
+	}	
+}
+@media screen and (min-width: 160em){
+	body{
+		font-size: 30px;
+	}	
+}
+@media screen and (min-width: 200em){
+	body{
+		font-size: 40px;
+	}	
+}
+@media screen and (min-width: 200em){
+	body{
+		font-size: 40px;
+	}	
+}
+@media screen and (min-width: 260em){
+	body{
+		font-size: 50px;
+	}	
+}
+@media screen and (min-width: 320em){
+	body{
+		font-size: 64px;
+	}	
+}
+@media screen and (min-width: 360em){
+	body{
+		font-size: 72px;
+	}	
+}
+@media screen and (min-width: 380em){
+	body{
+		font-size: 76px;
+	}	
+}
 /* Empty. Add your own CSS if you like */
 .tc{text-align:center;}.tr{text-align:right;}.tl{text-align:left;}
 .bz-summary ul li{display: inline-block;margin-right: 3em;margin-bottom: 1em;margin-top: 1em;}
 .bz-menu{position: relative;float: left;padding: 1em; text-align: center;}
-.bz-menu .number{position: absolute; top: 2px; left: 2px; width: 1.5em; color: #fff; display: block; border-radius: 1em; background-color: blue; text-align: center;}
-.bz-menu .card{padding: 2em 0; margin: 0 auto;border: 1px solid;}
-.bz-menu .card .item-body{border-top: 0;}
+.bz-menu .number{position: absolute; top: 2px; left: 2px; width: 1.5em; color: #fff; display: block; border-radius: 1em; background-color: blue; text-align: center;line-height: 1.5em;}
+.bz-menu .card{padding: 2em 0; margin: 0 auto;border: 1px solid;height: 10em; }
+.bz-menu .card .item-body{border-top: 0; margin-top: 1em;}
 
 .col-2{width: 50%;}
 .col-3{width: 33.3%;}
 .col-4{width: 25%;}
 .col-6{width: 20%;}
 
-
-
 .org-chart {
-	font-size: 10px;
     min-width: 60em;
-	width: 50%;
+	width: 48%;
+    font-size: 0.71em;
     display: inline-block;
     margin: 0 auto;
 }
@@ -60,6 +129,9 @@
 	text-align: center;
 }
 .member-wp .members{
+	float:left;
+}
+.member-wp > div{
 	display: inline-block;
 }
 .members{
