--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -5,366 +5,45 @@
   The Friends service returns an array of friend data
 -->
 <ion-view hide-nav-bar="true" hide-back-button="true">
-<ion-header-bar align-title="center" class="bar-positive">
-  <div class="buttons">
-    <button class="button" ng-click="doSomething()">Left Button</button>
-    <!-- <div>
-      <span>上海大众汽车</span>
-      <span>Shanghai VolksWagen</span>
-    </div> -->
-  </div>
-  <h1 class="title">CP3-2 四工段工程组织机构图</h1>
-  <div class="buttons">
-    <button class="button">Right Button</button>
-  </div>
-</ion-header-bar>
-  <ion-content class="padding">
-    <div class="content tc">
-
-<div class="org-chart cf">
-    <div class="director memeber">
-    <div class="section">
-          <span class="bz-catalog">A 组</span>
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>班长</span>
-            <span>186-1666-1666</span>
-          </div>
+    <ion-header-bar align-title="center" class="bar-positive">
+        <div class="buttons">
+            <button class="button" ng-click="doSomething()">Left Button</button>
         </div>
-  </div>
-  <div class="member-wp">
-      <div class="members cf">               
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
+        <h1 class="title">CP3-2 四工段工程组织机构图</h1>
+        <div class="buttons">
+            <button class="button">Right Button</button>
         </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
+    </ion-header-bar>
+    <ion-content class="padding">
+        <div class="content tc">
+            <org group="groupA"></org>
+            <org group="groupB"></org>
         </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-      </div>
-      <div class="members cf">               
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-      </div>
-      <div class="members cf">               
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div  class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
-<div class="org-chart cf">
-  <div class="director memeber">
-    <div class="section">
-          <span class="bz-catalog">A 组</span>
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>班长</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-  </div>
-  <div class="member-wp">
-      <div class="members cf">               
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-      </div>
-      <div class="members cf">               
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-      </div>
-      <div class="members cf">               
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-        <div class="section">
-          <img src=""/>
-          <div class="name">
-            <span>张三</span>
-            <span>Zhang San</span>
-          </div>
-          <div  class="job">
-            <span>清洁工</span>
-            <span>186-1666-1666</span>
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
-
-
-  
-</div>
-  </ion-content>
+    </ion-content>
     <ion-footer-bar align-title="left" class="bar-assertive">
-  <div class="bar org-footer bar-footer bar-balanced">
-    <div class="org-comment">
-    <p>带星号*员工表示为新员工</p>
-    <hr/>
-    <div>
-        <span>
-          <span>编制：</span><span>蒋亮亮</span>
-        </span><span>
-          <span>（日期）</span><span>2015年2月1日</span>
-        </span>
-    </div>
-    <div>
-      <span>
-        <span>审核：</span><span>杨海亮</span>
-      </span><span>
-        <span>（日期）</span><span>2015年8月20日</span>
-      </span>
-    </div>
-    <div>
-      <span>
-        <span>批准：</span><span>李总</span>
-      </span><span>
-        <span>（日期）</span><span>2015年8月22日</span>
-      </span>
-    </div>
-  </div>
-  </div>
-</ion-footer-bar>
+        <div class="bar org-footer bar-footer bar-balanced">
+            <div class="org-comment">
+                <p>带星号*员工表示为新员工</p>
+                <hr/>
+                <div>
+                    <span>
+                        <span>编制：</span><span>蒋亮亮</span></span><span>
+                        <span>（日期）</span><span>2015年2月1日</span>
+                    </span>
+                </div>
+                <div>
+                    <span>
+                        <span>审核：</span><span>杨海亮</span></span><span>
+                        <span>（日期）</span><span>2015年8月20日</span>
+                    </span>
+                </div>
+                <div>
+                    <span>
+                        <span>批准：</span><span>李总</span></span><span>
+                        <span>（日期）</span><span>2015年8月22日</span>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </ion-footer-bar>
 </ion-view>
