remove unused button

--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -6,13 +6,13 @@
 -->
 <ion-view hide-nav-bar="true" hide-back-button="true">
     <ion-header-bar align-title="center" class="bar-positive">
-        <div class="buttons">
+        <!-- <div class="buttons">
             <button class="button" ng-click="doSomething()">Left Button</button>
-        </div>
+        </div> -->
         <h1 class="title">CP3-2 四工段工程组织机构图</h1>
-        <div class="buttons">
+        <!-- <div class="buttons">
             <button class="button">Right Button</button>
-        </div>
+        </div> -->
     </ion-header-bar>
     <ion-content class="padding">
         <div class="content tc">
