--- a/www/css/style.css
+++ b/www/css/style.css
@@ -224,10 +224,11 @@
 	display: block;
 }
 .org-footer{
-	height: 6.5em;
     padding: 0.5em
 }
-
+.bar-footer{
+	height: 7em;
+}
 
 
 /* For Chart */
