fix double click

--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -4,7 +4,7 @@
   The FriendsCtrl pdivls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view ng-dblclick="goHome()" hide-nav-bar="true" hide-back-button="true">
+<ion-view on-double-click="goHome()" hide-nav-bar="true" hide-back-button="true">
     <ion-header-bar align-title="center" class="bar-positive">
         <!-- <div class="buttons">
             <button class="button" ng-click="doSomething()">Left Button</button>
