--- a/www/templates/kao-qin.html
+++ b/www/templates/kao-qin.html
@@ -1,4 +1,4 @@
-<ion-view ng-dblclick="goHome()" hide-nav-bar="true" hide-back-button="true">
+<ion-view on-double-click="goHome()" hide-nav-bar="true" hide-back-button="true">
   <ion-header-bar align-title="center" class="">
     <h1 class="title">CP3-2 审核问题关闭率</h1>
   </ion-header-bar>
