--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,291 +1,1 @@
-/* Media Query */
-@media screen and (min-width: 35.5em){
-	body{
-		font-size: 12px;
-	}
-}
-@media screen and (min-width: 48em){
-	body{
-		font-size: 14px;
-	}
-}
-@media screen and (min-width: 64em){
-	body{
-		font-size: 15px;
-	}
-}
-@media screen and (min-width: 80em){
-	body{
-		font-size: 16px;
-	}	
-}
-@media screen and (min-width: 80em){
-	body{
-		font-size: 16px;
-	}	
-}
-@media screen and (min-width: 120em){
-	body{
-		font-size: 24px;
-	}	
-}
-@media screen and (min-width: 120em){
-	body{
-		font-size: 24px;
-	}	
-}
-@media screen and (min-width: 160em){
-	body{
-		font-size: 30px;
-	}	
-}
-@media screen and (min-width: 200em){
-	body{
-		font-size: 40px;
-	}	
-}
-@media screen and (min-width: 200em){
-	body{
-		font-size: 40px;
-	}	
-}
-@media screen and (min-width: 260em){
-	body{
-		font-size: 50px;
-	}	
-}
-@media screen and (min-width: 320em){
-	body{
-		font-size: 64px;
-	}	
-}
-@media screen and (min-width: 360em){
-	body{
-		font-size: 72px;
-	}	
-}
-@media screen and (min-width: 380em){
-	body{
-		font-size: 76px;
-	}	
-}
-/* Empty. Add your own CSS if you like */
-.tc{text-align:center;}.tr{text-align:right;}.tl{text-align:left;}
-.bz-summary ul li{display: inline-block;margin-right: 3em;margin-bottom: 1em;margin-top: 1em;}
-.bz-menu{position: relative;float: left;padding: 1em; text-align: center;}
-.bz-menu .number{position: absolute; top: 2px; left: 2px; width: 1.5em; color: #fff; display: block; border-radius: 1em; background-color: blue; text-align: center;line-height: 1.5em;}
-.bz-menu .card{padding: 2em 0; margin: 0 auto;border: 1px solid;height: 10em; }
-.bz-menu .card .item-body{border-top: 0; margin-top: 1em;}
-
-.col-2{width: 50%;}
-.col-3{width: 33.3%;}
-.col-4{width: 25%;}
-.col-6{width: 20%;}
-
-.org-chart {
-    min-width: 60em;
-	width: 48%;
-    font-size: 0.71em;
-	float: left;
-    margin: 0 auto;
-}
-.org-chart *{
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	position: relative;
-}
-
-.director .bz-catalog{
-	position: absolute;
-	top:50%;
-	margin-top: -1em;
-	left: -4em;
-}
-.director{
-	width: 9em;
-	height: 8em;
-	margin: 0 auto 2em auto;
-}
-.director:after{
-	content: ' ';
-	display: block;
-	position: absolute;
-	height: 2em;
-	bottom: -2.3em;
-	left: 50%;
-	z-index: 2;
-	border-left: 0.3em solid #78cbd1;
-}
-.director.odd:after{
-	height: 4em;
-	bottom: -4em;
-}
-.org-chart div.memeber{
-	text-align: center;
-	font-weight: bold;
-	color: #333;
-	margin-bottom: 2em;
-}
-
-.member-wp{
-	text-align: center;
-}
-.member-wp .members{
-	float:left;
-}
-.member-wp > div{
-	display: inline-block;
-}
-.members{
-	padding: 2em 5em;
-}
-.org-chart img{
-    height: 9em;
-    width: 8em;
-    border: 0;
-    z-index: 3;
-    background-color: #fff;
-}
-.org-chart .section{
-	position: relative;
-    margin-bottom: 2em;
-}
-.org-chart .director .section{
-	margin-bottom: 0;
-}
-.org-chart .section + .section:before{
-    content: '';
-    display: block;
-    height: 3em;
-    border-left: 0.3em solid #78cbd1;
-    position: absolute;
-    left: 50%;
-    top: -2.8em;
-    z-index: 1;
-}
-.org-chart .section div{
-    width: 9em;
-    position: absolute;
-    padding: 0.5em;
-    right: -9em;
-    text-align: left;
-}
-.org-chart .section span{
-	display: block;
-}
-.org-chart .section div.name{
-	top:0;
-}
-.org-chart .section div.job{
-	bottom: 0;
-}
-.members:after{
-	content: "";
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 2em;	
-	margin: 0 auto;
-	border-top: 0.3em solid #78cbd1;
-	border-left: 0;
-	top: 0;
-	left: 9.1%
-}
-.members:last-child:after{
-	border-top: 0.3em solid #78cbd1;
-	border-right: 0.3em solid #78cbd1;
-	border-left: 0;
-	left:-50%;
-    right: 50%;
-}
-.members:first-child:after{
-    border-top: 0.3em solid #78cbd1;
-    border-left: 0.3em solid #78cbd1;
-    border-right: 0;
-    left: 50%;
-}
-
-.members ul li > div{
-	width: 15em;
-	height: 8em;
-}
-.org-comment{
-	clear: both;
-	width: 100%;
-}
-.org-comment p{
-}
-.org-comment div{
-	width:33%;
-	float: left;
-}
-.org-comment div > span{
-	display: block;
-}
-.org-footer{
-    padding: 0.5em
-}
-.bar-footer{
-	height: 7em;
-}
-
-
-/* For Chart */
-.actualIndicator, .chartBar {
-  fill: steelblue;
-}
-.actualIndicator{
-  stroke: #eee;
-}
-.axis {
-  font: 1em sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.x.axis line {
-  display: none;
-}
-.line {
-  fill: none;
-  stroke: #E214C0;
-  stroke-width: 1.5px;
-}
-.dotIndicator, .dot {
-  fill: #E214C0;
-  stroke: #E214C0;
-}
-.bar-chart{
-  position: relative;
-}
-.bar-chart table.rate{
-  border-collapse: collapse;
-  text-align: center;
-  font-size: 0.71em;
-  position: absolute;
-}
-.bar-chart td, .bar-chart th {
-  border: 1px solid gray;
-  line-height: 2em;
-}
-.bar-chart tr.month td span{
-  visibility: hidden;
-}
-svg{
-  overflow: visible;
-}
-.val{
-  font-size:1em;
-}
-.dtline, .xyPadding{
-  fill: none;
-  stroke: #000;
-  stroke-width: 1px;
-}
-/* End of Chart */
+img.demo{border:0; width:100%;}
