--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -1,44 +1,9 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
-  <ion-header-bar align-title="center" class="bar-positive">
-  <div class="buttons">
-    <!-- <button class="button" ng-click="doSomething()">Left Button</button> -->
-    <!-- <div>
-      <span>上海大众汽车</span>
-      <span>Shanghai VolksWagen</span>
-    </div> -->
-  </div>
-  <h1 class="title">CPX 小组信息板</h1>
-  <div class="buttons">
-    <!-- <button class="button">Right Button</button> -->
-  </div>
-</ion-header-bar>
-  <ion-content zoomable class="padding">
-    <img src="../img/home.jpg" usemap="menuMap" style="border:0;"/>
+  <ion-content>
+    <img class="demo" src="../img/home.jpg" usemap="menuMap"/>
     <map name="menuMap" id="menuMap">
-      <area shape="circle" coords="180,139,14" href ="venus.html" style="cursor: pointer" alt="Venus" />
-      <area shape="circle" coords="180,139,14" href ="venus.html" style="cursor: pointer" alt="Venus" />
+      <area shape="rect" coords="180,139,14" href ="#/kpi"/>
+      <area shape="rect" coords="180,139,14" href ="#/green-cross"/>
     </map>
-    <!-- <div class="bz-summary tc">
-      <ul>
-        <li><span>班组：</span><span>张三</span></li>
-        <li><span>A班负责人：</span><span>李四</span></li>
-        <li><span>B班负责人：</span><span>王五</span></li>
-        <li><span>更新时间：</span><span>2015年8月20日 15:30</span></li>
-      </ul>
-    </div>
-    <div ng-repeat="m in menus" class="bz-menu" ng-class="'col-'+col">
-      <a ng-href="{{m.url}}" ng-style="{'color': m.fc}">
-        <div class="list card" ng-style="{'border-color': m.bc}">
-          <span ng-bind="m.nb" class="number"></span>
-          <div class="item item-body">
-            <span ng-bind="m.nm"></span>
-          </div>
-        </div>
-      </a>
-    </div>
-    {{text}}
-    <button ng-init="text = 'Gesture' " class="button">Init</button>
-    <button on-hold="text = 'on hold'" class="button">onHold</button> -->
-
   </ion-content>
 </ion-view>
