--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -1,9 +1,6 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
   <ion-content>
     <img class="demo" src="../img/home.jpg" usemap="menuMap"/>
-    <map name="menuMap" id="menuMap">
-      <area shape="rect" coords="180,139,14" href ="#/kpi"/>
-      <area shape="rect" coords="180,139,14" href ="#/green-cross"/>
-    </map>
+    <map name="menuMap" id="menuMap" demo-img></map>
   </ion-content>
 </ion-view>
