fix image url issue

--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
   <ion-content>
-    <img class="demo" src="../img/home.jpg" usemap="menuMap"/>
+    <img class="demo" src="/img/home.jpg" usemap="menuMap"/>
     <map name="menuMap" id="menuMap" demo-img></map>
   </ion-content>
 </ion-view>
