--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -1,1 +1,1 @@
-<ion-view on-double-click="goHome()" hide-nav-bar="true" hide-back-button="true"><ion-content><img class="demo" src="../img/Green-Cross.jpg" usemap="menuMap"/></ion-content></ion-view>
+<ion-view on-double-click="goHome()" hide-nav-bar="true" hide-back-button="true"><ion-content><img class="demo" src="/img/Green-Cross.jpg" usemap="menuMap"/></ion-content></ion-view>
