--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -15,11 +15,8 @@
 	  	<div></div>
 	</ion-header-bar>
 
-    <ion-content>
-	    
-    </ion-content>
-    <ion-footer-bar style="height: calc(100% - 3em);">
-        <div class="entryWp">
+    <ion-content scroll="false">
+	    <div class="entryWp">
         	<a href="#/dash">
 	        	<div class="entry">
 		        	<div class="img tc">
@@ -45,5 +42,5 @@
 	        	</div>
 	        </a>
         </div>
-    </ion-footer-bar>
+    </ion-content>
 </ion-view>
