--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -21,7 +21,7 @@
 		</div>
 	  	<div></div>
 	</ion-header-bar>
-  <ion-content on-double-tap="goHome('home')">
+  <ion-content scroll="false" on-double-tap="goHome('home')">
   			<!-- <div class="clear header three tc color-menu-type">
 				<div class="twrapper">
 					<div class="type an-dropdown clear" ng-class="{open: kqDropdown.isOpen}">
@@ -61,9 +61,7 @@
 				</div>
 				
 			</div> -->
-  </ion-content>
-  <ion-footer-bar style="height: calc(100% - 4em);">
-    <div class="clear" style="width: 100%; height: 100%;">
+			<div class="clear" style="width: 100%; height: 100%;">
 	    <div ng-repeat="m in menus" class="bz-menu col-3">
         <div ng-hide="!m.hatColor || m.hatColor==''" class="hat"><span class="glyphicon glyphicon-bed" style="color: {{m.hatColor}}"></span></div>
         <div class="rate">
@@ -87,5 +85,8 @@
 		<a href="#/kpi"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 		<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
 	</div>
+  </ion-content>
+  <ion-footer-bar >
+    
   </ion-footer-bar>
 </ion-view>
