--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -29,7 +29,7 @@
 	        		</div>
 	        	</div>
        		</a>
-       		<a href="#/dash">
+       		<a href="#/view-board">
 	        	<div class="entry">
 	        		<div class="img tc">
 		        		<img src="img/svg/line-board.svg"/>
