--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -3,11 +3,11 @@
 	  	<div></div>
 		<div class="title anji-theme">
 			<div class="title-wp">
-				<img class="fl logo-left" src="img/logo1.jpg"/>
+				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
+				<div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
 				<div>
 			  		<div class="bold-title single-line">安全绿十字</div>
 				</div>
-				<div class="fr logo-right-wp"><img class="anji" src="img/Anji.svg"/><img src="img/CEVA.svg"/></div>
 			</div>
 		</div>
 	  	<div></div>
