--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -26,7 +26,7 @@
                         <span ng-bind="selectedCriteria.kuqu.whse_code"></span>
                         <span ng-bind="selectedCriteria.banzu.description"></span>第三方物流KPI样图</div>
                 </div>
-                <div class="fr logo-right-wp"><img src="img/Anji.svg"/><img src="img/CEVA.svg"/></div>
+                <div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
             </div>
 
         </div>
