--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -9,12 +9,12 @@
         <div></div>
         <div class="title anji-theme">
             <div class="title-wp">
-                <img class="fl logo-left" src="img/logo1.jpg"/>
+                <div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
+                <div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
                 <div>
                     <div class="bold-title single-line">
                         <span ng-bind="selectedCriteria.kuqu.whse_code"></span>-<span ng-bind="selectedCriteria.banzu.description"></span>组织机构图</div>
                 </div>
-                <div class="fr logo-right-wp"><img src="img/Anji.svg"/><img src="img/CEVA.svg"/></div>
             </div>
 
         </div>
