--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -4,12 +4,12 @@
 	  	<div></div>
 		<div class="title anji-theme">
 			<div class="title-wp">
-				<img class="fl logo-left" src="img/logo1.jpg"/>
+				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
+				<div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
 				<div class="bold-title single-line">
 		  			<span class="mainTitle">SFM现场管理信息系统</span>
 					<span class="subTitle">ShopFloor Management System</span>
 		  		</div>
-				<div class="fr logo-right-wp"><img src="img/Anji.svg"/><img src="img/CEVA.svg"/></div>
 			</div>
 		</div>
 	  	<div></div>
