--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -3,7 +3,8 @@
 	  	<div></div>
 		<div class="title anji-theme">
 			<div class="title-wp">
-				<img class="fl logo-left" src="img/logo1.jpg"/>
+				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
+				<div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
 				<div>
 			  		<div class="bold-title single-line">
 			  			<span class="mainTitle">KPI跟踪-<span ng-bind="aspectTitle"></span></span>
@@ -12,10 +13,7 @@
 				  			<span ng-bind="criteriaFromCache.banzu?criteriaFromCache.banzu.description+'-':''"></span>
 				  			<span ng-bind="criteriaFromCache.banci?criteriaFromCache.banci.description:''"></span></div>
 						</div>
-						
-			  		
 				</div>
-				<div class="fr logo-right-wp"><img src="img/Anji.svg"/><img src="img/CEVA.svg"/></div>
 			</div>
 
 		</div>
