--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -10,7 +10,7 @@
         <div class="title anji-theme">
             <div class="title-wp">
                 <div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
-                <div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
+                <div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
                 <div>
                     <div class="bold-title single-line">
                         <span ng-bind="selectedCriteria.kuqu.whse_code"></span>-<span ng-bind="selectedCriteria.banzu.description"></span>组织机构图</div>
