--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -4,7 +4,7 @@
 		<div class="title anji-theme" style="margin-top: 0;">
 			<div class="title-wp">
 				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
-				<div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
+				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
 			  		<div class="bold-title single-line"><span ng-bind="criteria.kuqu?criteria.kuqu.whse_code:''"></span>小组信息板</div>
 				</div>
@@ -95,7 +95,7 @@
 		</div></div>
 	</div>
 	
-	<div class="quickNav" style="position: absolute; right: 1em; bottom: 0.5em; font-size: 1.5em; line-height: 1em;">
+	<div class="quickNav">
 		<a href="#/entry"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 		<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
 	</div>
