--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -5,7 +5,7 @@
 		<div class="title anji-theme">
 			<div class="title-wp">
 				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
-				<div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
+				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div class="bold-title single-line">
 		  			<span class="mainTitle">SFM现场管理信息系统</span>
 					<span class="subTitle">ShopFloor Management System</span>
@@ -18,7 +18,7 @@
     <ion-content scroll="false">
 	    <div class="entryWp">
         	<a href="#/dash">
-	        	<div class="entry">
+	        	<div class="entry" style="margin-right: 10%;">
 		        	<div class="img tc">
 		        		<img src="img/svg/view-board.svg"/>
 		        	</div>
