--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -4,7 +4,7 @@
 		<div class="title anji-theme">
 			<div class="title-wp">
 				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
-				<div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
+				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
 			  		<div class="bold-title single-line">
 			  			<span class="mainTitle">外库运作岗位柔性表</span>
