--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -4,7 +4,7 @@
 		<div class="title anji-theme">
 			<div class="title-wp">
 				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
-				<div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
+				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
 			  		<div class="bold-title single-line">
 			  			<span class="mainTitle">KPI跟踪-<span ng-bind="aspectTitle"></span></span>
@@ -61,7 +61,7 @@
 			</div> -->
 			<div class="clear" style="width: 100%; height: 100%;">
 	    <div ng-repeat="m in menus" class="bz-menu col-3">
-        <div ng-hide="!m.hatColor || m.hatColor==''" class="hat"><span class="glyphicon glyphicon-bed" style="color: {{m.hatColor}}"></span></div>
+        <div class="hat"><span class="glyphicon glyphicon-bed" style="color: {{m.hatColor}}"></span></div>
         <div class="rate">
         	<span ng-bind="m.rate"></span>
         </div>
