--- a/www/templates/view-board.html
+++ b/www/templates/view-board.html
@@ -1,10 +1,10 @@
 <ion-view hide-nav-bar="true" hide-back-button="true" style="background: #19426E;">
-  <ion-header-bar align-title="center" style="height: 3em">
+  <ion-header-bar align-title="center">
 	  	<div></div>
 		<div class="title anji-theme" style="margin-top: 0;">
 			<div class="title-wp">
 				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
-				<div class="fr logo-right-wp"><img src="img/ANJI.jpg"/><img src="img/CEVA.svg"/></div>
+				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
 			  		<div class="bold-title single-line"><span ng-bind="criteria.kuqu?criteria.kuqu.whse_code:''"></span>小组信息板</div>
 				</div>
