--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -39,7 +39,7 @@
     </ion-header-bar>
     <ion-content scroll="false" class="bgFF padding kpiChart" style="background: #FFF;    margin-bottom: 3em;">
         
-       <kao-qin-chart data="chart.data" ylabel="{{chart.yLabel}}" title="{{chart.title}}"></kao-qin-chart>
+       <kao-qin-chart data="chart.data" isRate="chart.isRate" ylabel="{{chart.yLabel}}" title="{{chart.title}}"></kao-qin-chart>
     </ion-content>
     <ion-footer-bar class="clear" style="">
     <div class="clear header tc color-menu-type" style="    width: 100%; position: absolute; left: 0; bottom: 0;">
