--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -9,9 +9,9 @@
 			  		<div class="bold-title single-line">
 			  			<span class="mainTitle">外库运作岗位柔性表</span>
 						<div class="subTitle">
-							<span ng-bind="selectedCriteria.kuqu.whse_name">仓库代码</span>-
+							(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
 							<span ng-bind="selectedCriteria.banzu.description">班组</span>-
-							<span ng-bind="selectedCriteria.banci.description">班次</span>
+							<span ng-bind="selectedCriteria.banci.description">班次</span>)
 						</div>
 			  		</div>
 				</div>
