--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -6,7 +6,14 @@
 				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
-			  		<div class="bold-title single-line">安全绿十字</div>
+					<div class="bold-title single-line">
+			  			<span class="mainTitle">安全绿十字</span>
+						<div class="subTitle">
+							(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
+							<span ng-bind="selectedCriteria.banzu.description">班组</span>-
+							<span ng-bind="selectedCriteria.banci.description">班次</span>)
+						</div>
+			  		</div>
 				</div>
 			</div>
 		</div>
