--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -26,7 +26,7 @@
                     <div class="bold-title single-line">
                         <span class="mainTitle" ng-bind="KPITitle"></span>
                         <span class="subTitle">
-                            (<span ng-bind="selectedCriteria.kuqu.whse_name">仓库代码</span>-
+                            (<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
                             <span ng-bind="selectedCriteria.banzu.description">班组</span>
                             <span ng-hide="aspect=='member'" ng-bind="selectedCriteria.banci.description">班次</span>)
                         </span>
