--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -9,9 +9,9 @@
 			  		<div class="bold-title single-line">
 			  			<span class="mainTitle">KPI跟踪-<span ng-bind="aspectTitle"></span></span>
 						<div class="subTitle">
-				  			<span ng-bind="criteriaFromCache.kuqu?criteriaFromCache.kuqu.whse_name+'-':''"></span>
+				  			(<span ng-bind="criteriaFromCache.kuqu?criteriaFromCache.kuqu.whse_code+'-':''"></span>
 				  			<span ng-bind="criteriaFromCache.banzu?criteriaFromCache.banzu.description+'-':''"></span>
-				  			<span ng-bind="criteriaFromCache.banci?criteriaFromCache.banci.description:''"></span></div>
+				  			<span ng-bind="criteriaFromCache.banci?criteriaFromCache.banci.description:''"></span>)</div>
 						</div>
 				</div>
 			</div>
