--- a/www/templates/kpi-group.html
+++ b/www/templates/kpi-group.html
@@ -9,9 +9,10 @@
 			  		<div class="bold-title single-line">
 			  			<span class="mainTitle">KPI跟踪</span>
 						<div class="subTitle">
-				  			<span ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_name+'-':''"></span>
+				  			(<span ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code+'-':''"></span>
 				  			<span ng-bind="selectedCriteria.banzu?selectedCriteria.banzu.description+'-':''"></span>
-				  			<span ng-bind="selectedCriteria.banci?selectedCriteria.banci.description:''"></span></div>
+				  			<span ng-bind="selectedCriteria.banci?selectedCriteria.banci.description:''"></span>)
+				  		</div>
 						</div>
 						
 				</div>
