--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -9,7 +9,7 @@
 			  		<div class="bold-title single-line">
 			  			<span class="mainTitle">考勤汇总</span>
 						<span class="subTitle">
-							(<span ng-bind="selectedCriteria.kuqu.whse_name">仓库代码</span>-
+							(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
 							<span ng-bind="selectedCriteria.banzu.description">班组</span>-
 							<span ng-bind="selectedCriteria.banci.description">班次</span>)
 						</span>
