--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -13,7 +13,12 @@
                 <div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
                 <div>
                     <div class="bold-title single-line">
-                        <span ng-bind="selectedCriteria.kuqu.whse_code"></span>-<span ng-bind="selectedCriteria.banzu.description"></span>组织机构图</div>
+                        <span class="mainTitle">组织机构图</span>
+                        <div class="subTitle">
+                            (<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
+                            <span ng-bind="selectedCriteria.banzu.description">班组</span>)
+                        </div>
+                    </div>
                 </div>
             </div>
 
