--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -21,7 +21,7 @@
 	</ion-header-bar>
     <ion-content on-double-tap="goHome('cross')">
         	
-			<div class="content-wrapper green-calendar">
+			<div class="content-wrapper green-calendar" style="    height: initial;">
 				<table>
 					<tbody>
 					<tr>
