--- a/www/templates/view-board.html
+++ b/www/templates/view-board.html
@@ -6,7 +6,7 @@
 				<div class=" logo-left"><img class="fl" src="img/logo1.jpg"/></div>
 				<div class="fr logo-right-wp"><img src="img/LOG9.jpg"/></div>
 				<div>
-			  		<div class="bold-title single-line"><span ng-bind="criteria.kuqu?criteria.kuqu.whse_code:''"></span>小组信息板</div>
+			  		<div class="bold-title single-line"><span ng-bind="criteria.kuqu?criteria.kuqu.whse_code:''"></span>CPX LOC BPD 目视板</div>
 				</div>
 			</div>
 		</div>
