--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -11,7 +11,7 @@
 						<div class="subTitle">
 				  			(<span ng-bind="criteriaFromCache.kuqu?criteriaFromCache.kuqu.whse_code+'-':''"></span>
 				  			<span ng-bind="criteriaFromCache.banzu?criteriaFromCache.banzu.description+'-':''"></span>
-				  			<span ng-bind="criteriaFromCache.banci?criteriaFromCache.banci.description:''"></span>)</div>
+				  			<span ng-bind="criteriaFromCache.banci?criteriaFromCache.banci.shift_code:''"></span>)</div>
 						</div>
 				</div>
 			</div>
