--- a/www/templates/kpi-group.html
+++ b/www/templates/kpi-group.html
@@ -11,7 +11,7 @@
 						<div class="subTitle">
 				  			(<span ng-bind="selectedCriteria.kuqu?selectedCriteria.kuqu.whse_code+'-':''"></span>
 				  			<span ng-bind="selectedCriteria.banzu?selectedCriteria.banzu.description+'-':''"></span>
-				  			<span ng-bind="selectedCriteria.banci?selectedCriteria.banci.description:''"></span>)
+				  			<span ng-bind="selectedCriteria.banci?selectedCriteria.banci.shift_code:''"></span>)
 				  		</div>
 						</div>
 						
