--- a/www/css/style.css
+++ b/www/css/style.css
@@ -489,12 +489,12 @@ ion-footer-bar .color-menu-type.header div.twrapper:last-child{ float: left;}
 .color-menu-type.footer.green-cross .value.damage{ background-color: #E73334;}
 .color-menu-type.footer.green-cross .value.supplier{ background-color: #F5AA35;}
 
-.color-menu-type.footer{padding-bottom: 1em;}
-.color-menu-type.footer div.twrapper{ float: left; }
+/*.color-menu-type.footer{padding-bottom: 1em;}*/
+.color-menu-type.footer div.twrapper{ float: left;     margin-right: 1em;}
 
-.color-menu-type.footer .type div.value{ padding:0;margin: 1em;}
+.color-menu-type.footer .type div.value{ padding:0;margin: 0.5em;}
 .color-menu-type.footer .value{width: 4em;border: 0.2em solid; border-radius: 0.5em;}
-.color-menu-type.footer.green-cross .type .name{ border-left: 0.2em dashed #94ACB6; border-right: 0;}
+.color-menu-type.footer.green-cross .type .name{ border-left: 0.2em dashed #94ACB6; border-right: 0; padding: 0.5em}
 .color-menu-type.footer.green-cross .value{border: 0;}
 
 .color-menu-type.footer .value.daily{border-color: #95C730;}
@@ -506,14 +506,13 @@ ion-footer-bar .color-menu-type.header div.twrapper:last-child{ float: left;}
 
 .kqhz table{width: 100%;    font-size: 0.9em;}
 .kqhz th{color: #94ACB6;}
-.kqhz table td, .kqhz table th{border: 0.2em solid #A9BCC9; padding: 0.5em; vertical-align: middle;    color: #4172A9; font-size: 0.9em;}
+.kqhz table td, .kqhz table th{word-break: break-all; border: 0.2em solid #A9BCC9; padding: 0.2em 0; vertical-align: middle;    color: #4172A9; font-size: 0.9em;}
 .green-calendar table{border-collapse: collapse; color:#95ACBC; margin: 0 auto;font-weight: bold;}
 .green-calendar table td{
-    font-size: 1.5em;
     border: 0.1em solid #A9BCC9;
-    width: 3em;
-    line-height: 3em;
-    height: 3em;}
+    vertical-align: middle;
+    color: #f2f2f2;
+}
 .green-calendar table td.empty{border: 0;}
 
 .mainTitle{        position: relative;
@@ -851,7 +850,7 @@ span.arrow-border-up span{
 
 .member-status.v0{background:#A2D329;}
 .member-status.v1{background: #12AAEB;}
-.member-status.v2{background: #F2E439;}
+.member-status.v2{background: #F5AA35;}
 .member-status.v3{background: #E73334;}
 .newOrOld{
     visibility: hidden;
@@ -866,3 +865,7 @@ span.arrow-border-up span{
     z-index: 9;
     font-size: 1.5em;
 }
+.gRow{height: 10%; text-align: center;}
+.gRow > div{    
+    display: inline-block;
+    min-width: 3em;}
