--- a/www/templates/lgjh.html
+++ b/www/templates/lgjh.html
@@ -11,7 +11,7 @@
 						<div class="subTitle">
 							(<span ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>-
 							<span ng-bind="selectedCriteria.banzu.description">班组</span>-
-							<span ng-bind="selectedCriteria.banci.description">班次</span>)
+							<span ng-bind="selectedCriteria.banci.shift_code">班次</span>)
 						</div>
 			  		</div>
 				</div>
