--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -82,6 +82,7 @@
 	<div class="quickNav">
 		<a href="#/kpi"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 		<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
+		<a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
 	</div>
   </ion-content>
   <ion-footer-bar >
