--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -98,6 +98,7 @@
 	<div class="quickNav">
 		<a href="#/entry"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 		<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
+		<a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
 	</div>
   </ion-content>
 </ion-view>
