--- a/www/css/style.css
+++ b/www/css/style.css
@@ -105,6 +105,7 @@ ion-view.view {
     height: 100%;
     background-position: 95% 50%;
 	margin-bottom: 2em;
+    padding-bottom: 1em;
 	border-radius: 0.5em;
 }
 .bz-menu .card .item-body .menu-eng{
@@ -125,11 +126,16 @@ ion-view.view {
     left: 3em;
     bottom: 0;
 }
+.bz-menu .hat img{
+    height: 100%;
+}
 .bz-menu .hat{
     position: absolute;
     left: 50%;
     top: 0em;
+    width: 1em;
     margin-left: -0.5em;
+    height: 1em;
 }
 .bz-menu .rate{
     position: absolute;
@@ -137,6 +143,8 @@ ion-view.view {
     right: 1.5em;
     color: #aaa;
     z-index: 9;
+    width: 50%;
+    text-align: right;
 }
 .bz-menu .card{
     background-color: rgba(38, 85, 131,0.2);
