--- a/www/templates/entry.html
+++ b/www/templates/entry.html
@@ -18,7 +18,7 @@
     <ion-content scroll="false">
 	    <div class="entryWp">
         	<a href="#/dash">
-	        	<div class="entry" style="margin-right: 10%;">
+	        	<div class="entry" style="left: 15%;">
 		        	<div class="img tc">
 		        		<img src="img/svg/view-board.svg"/>
 		        	</div>
@@ -30,7 +30,7 @@
 	        	</div>
        		</a>
        		<a href="#/view-board">
-	        	<div class="entry">
+	        	<div class="entry" style="right: 15%;">
 	        		<div class="img tc">
 		        		<img src="img/svg/line-board.svg"/>
 		        	</div>
