--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -61,10 +61,12 @@
 				</div></div>
 			</div>
 	
-		    <div class="clear" style="    height: 100%; padding-top: 4em;">
-			    <div ng-repeat="m in menus" class="bz-menu col-3">
+		    <div class="clear" style="height: 100%; padding-top: 4em;">
+			    <div ng-repeat="m in menus" 
+			    	ng-class="{freDay: menuBorders[$index].frequency==1, freWeek: menuBorders[$index].frequency==2, freNotSure: menuBorders[$index].frequency==3}" 
+			    	class="bz-menu col-3">
 			      <a ng-click="goTo(m)" ng-style="{'color': m.fc}">
-			        <div class="list card" ng-style="{'border-color': m.bc, 'background-image': 'url('+m.bg+')'}">
+			        <div class="list card" ng-style="{'background-image': 'url('+m.bg+')'}">
 			          <div class="item item-body">
 			          	<div ng-bind="$index+1" class="number"></div>
 			            <div class="menu-desc">
